force-app/main/default/objects/Product_Subscription__mdt/Product_Subscription__mdt.object-meta.xml
<CustomObject>
    <label>Product Subscription</label>
    <pluralLabel>Product Subscriptions</pluralLabel>
</CustomObject>