force-app/main/default/objects/Product_Subscription__mdt/fields/ATM_Fee__c.field-meta.xml
<CustomField>
    <fullName>ATM_Fee__c</fullName>
    <label>%ATM Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>