force-app/main/default/objects/Product_Subscription__mdt/fields/Home_Country__c.field-meta.xml
<CustomField>
    <fullName>Home_Country__c</fullName>
    <label>Home Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Germany</fullName>
                <default>true</default>
                <label>Germany</label>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>